[package]
name = "jsonmpk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jsonmpk"
path = "src/lib.rs"

[dependencies]
rmp = "0.8.11"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"

[dev-dependencies]
rmp-serde = "1.1.1"

# thiserror = "1.0.38"
