[package]
name = "jsonmpk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rmp = "0.8.11"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
rmp-serde = "1.1.1"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.jsonmpk]
path = ".."

[dev-dependencies.jsonmpk]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_2"
path = "fuzz_targets/fuzz_target_2.rs"
test = false
doc = false
